--- a/css/styles.css
+++ b/css/styles.css
@@ -33,6 +33,16 @@
 
 /* Global */
 
+@font-face {
+    font-family: ALSRubl;
+    src: url(fonts/rouble.ttf);
+    /* Путь к файлу со шрифтом */
+}
+
+.rubznak {
+    font-family: ALSRubl;
+}
+
 .page-body {
     min-width: 1200px;
     margin: 0;
@@ -448,7 +458,7 @@ img {
     box-shadow: 0px 7px 15px rgba(0, 1, 1, 0.15);
     max-width: 1200px;
     margin: 0 auto;
-    margin-bottom: -360px;
+    margin-bottom: -355x;
     font-size: 21px;
     line-height: 52px;
     z-index: 2;
@@ -721,7 +731,7 @@ img {
 .map {
     position: relative;
     z-index: 0;
-    /*margin-top: -145px;*/
+    margin-top: -365px;
 }
 
 
@@ -917,45 +927,6 @@ img {
 
 /* check-box filter */
 
-.checkbox-filter-price:hover+label,
-.checkbox-filter-price:focus+label {
-    color: var(--special);
-}
-
-.checkbox-filter-price {
-    position: absolute;
-    z-index: -1;
-    opacity: 0;
-}
-
-.checkbox-filter-price+label {
-    content: "";
-    position: absolute;
-    left: -42px;
-    top: 0;
-    width: 16px;
-    height: 16px;
-    border: 2px solid #000000;
-}
-
-.checkbox-filter-price+label::before {
-    content: "";
-    display: inline-block;
-    width: 23px;
-    height: 23px;
-    border: 23px solid var(--basic-white);
-    background-color: none;
-    background-repeat: no-repeat;
-    background-position: center center;
-    background-size: 50% 50%;
-}
-
-.checkbox-filter-price:checked+label::before {
-    border: 2px solid var(--basic-white);
-    background-color: none;
-    /*background-image: url("img/checkbox-on.svg");*/
-}
-
 .checkbox-lbl-price {
     display: inline-flex;
     align-items: left;
@@ -1032,13 +1003,13 @@ img {
 
 .checkbox-position input:checked+label {
     background-color: none;
-    /*background-image: url("img/checkbox-on.svg");*/
+    /*background-image: url("/..img/checkbox-on.svg");*/
     cursor: pointer;
 }
 
 .checkbox-position input:checked+label:before {
     background-color: none;
-    /*background-image: url("img/checkbox-on.svg");*/
+    /*background-image: url("../img/checkbox-on.svg");*/
     content: "";
     position: absolute;
     left: 0px;
