--- a/css/styles.css
+++ b/css/styles.css
@@ -246,22 +246,31 @@ img {
 .desc {
     width: 1200px;
     height: 174px;
-    padding-top: 55px;
+    padding-top: 27px;
     text-align: center;
     line-height: 26px;
+    margin-bottom: 13px;
     /*---grid-----*/
     /*outline: 5px solid rgba(0, 255, 255, 0.5);*/
     /*outline-offset: -5px;*/
 }
 
+.desc p {
+    padding-top: 29px;
+}
+
 .text-pic {
     display: inline-block;
     width: 400px;
-    height: 209px;
-    padding-top: 47px;
+    height: 222px;
+    padding-top: 34px;
     text-align: center;
     background-color: var(--sea-green);
     color: var(--basic-white);
+}
+
+.text-pic p {
+    padding-top: 10px;
 }
 
 .container {
@@ -311,10 +320,10 @@ img {
 .features {
     width: 1100px;
     height: 184px;
-    padding-left: 50px;
+    padding-left: 45px;
     padding-top: 64px;
     padding-bottom: 82px;
-    padding-right: 50px;
+    padding-right: 0px;
     /* grid */
     /*outline: 5px solid rgba(255, 0, 0, 0.3);*/
 }
@@ -325,7 +334,7 @@ img {
     padding: 0;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
-    column-gap: 20px;
+    column-gap: 75px;
     /*-----------------*/
     list-style: none;
 }
@@ -334,7 +343,7 @@ img {
     display: inline-block;
     box-sizing: border-box;
     max-width: 430px;
-    margin-left: 10px;
+    margin-left: 0px;
     margin-right: 10px;
     text-align: center;
     font-weight: 400;
@@ -363,9 +372,9 @@ img {
 
 .landmark {
     height: 209px;
-    padding-top: 47px;
-    padding-left: 72px;
-    padding-right: 72px;
+    padding-top: 34px;
+    padding-left: 32px;
+    padding-right: 32px;
     background-color: var(--light-yellow);
     /*-----------------*/
     /*outline: 5px solid rgba(0, 255, 255, 0.7);*/
@@ -381,10 +390,16 @@ img {
     line-height: 21px;
     padding-left: 25px;
     padding-right: 25px;
+    margin-right: 34px;
     vertical-align: center;
     /*---grid-----*/
     /*outline: 5px solid rgba(0, 255, 255, 0.7);*/
     /*outline-offset: -5px;*/
+}
+
+.landmark-item h3 {
+    font-size: 21px;
+    line-height: 21px;
 }
 
 
@@ -394,40 +409,50 @@ img {
     width: 1200px;
     height: 150px;
     text-align: center;
-    padding-top: 56px;
+    padding-top: 49px;
     /*-----------------*/
     /*outline: 5px solid rgba(0, 255, 0, 0.7);*/
     /*outline-offset: -5px;*/
 }
 
-.offers h1 {
-    width: 568px;
+.offers h2 {
     height: 56px;
-    padding-top: 30px;
-    background-color: var(--light-brown);
     text-align: center;
-    font-size: 21px;
-    color: var(--basic-white);
-    line-height: 26px;
+    font-size: 30px;
+    line-height: 24px;
+    color: var(--basic-black);
 }
 
 .offers p {
-    width: 568px;
+    width: 435px;
     height: 95px;
-    margin-left: 316px;
-    margin-right: 316px;
+    font-size: 14px;
+    line-height: 21px;
+    /*margin-left: 316px;*/
+    /*margin-right: 316px;*/
+    margin: -22px auto;
     text-align: center;
-    vertical-align: middle;
+    /*vertical-align: middle;*/
 }
 
 .offers-search {
+    /*display: flexbox;*/
     width: 568px;
-    height: 56px;
-    margin-left: 316px;
-    padding-top: 30px;
+    height: 71px;
+    margin: -15px auto 0;
+}
+
+.offers-search h3 {
+    display: inline-flex;
+    width: 568px;
+    /*height: 96px;*/
+    align-content: center;
+    align-self: center;
+    */padding-top: 30px;
+    font-size: 21px;
+    line-height: 26px;
+    color: var(--basic-white);
     background-color: var(--light-brown);
-    text-align: center;
-    vertical-align: middle;
 }
 
 .win-popup {
@@ -454,15 +479,14 @@ img {
     flex-wrap: nowrap;
     text-align: center;
     width: 458px;
-    height: 295px;
+    height: 290px;
     box-shadow: 0px 7px 15px rgba(0, 1, 1, 0.15);
     max-width: 1200px;
-    margin: 0 auto;
-    margin-bottom: -355x;
+    margin: -20px auto 0;
+    margin-bottom: -355px;
     font-size: 21px;
     line-height: 52px;
-    z-index: 2;
-    padding: 20px 55px 50px 55px;
+    padding: 55px 55px 50px 55px;
     background-color: var(--basic-white);
     /* grid */
     /*outline: 5px solid rgba(0, 11, 55, 0.8);*/
@@ -481,10 +505,10 @@ img {
 
 .box {
     display: grid;
-    grid-template-columns: 140px 140px 140px 30px;
-    row-gap: 29px;
+    grid-template-columns: 115px 150px 150px 35px;
+    row-gap: 10px;
     z-index: 2;
-    column-gap: 10;
+    column-gap: 0px;
     min-height: 70px;
     vertical-align: middle;
     text-align: left;
@@ -505,7 +529,7 @@ img {
 .box input {
     display: inline-flex;
     height: 30px;
-    width: 310px;
+    width: 320px;
     border: none;
     color: var(--basic-black);
     background: var(--yellow-light);
@@ -513,6 +537,7 @@ img {
     font-weight: 700;
     line-height: 26px;
     grid-column: 2 / 4;
+    padding-left: 20px;
     margin-right: 6px;
     text-align: left;
     vertical-align: middle;
@@ -547,17 +572,14 @@ img {
 
 .box2 {
     display: grid;
-    grid-template-columns: 91px 12px 114px 12px 91px 12px 114px 12px;
-    /*row-gap: 6px;*/
+    grid-template-columns: 120px 12px 100px 12px 110px 12px 100px 12px;
+    row-gap: 10px;
     /*column-gap: 10px;*/
-    height: 38px;
+    height: 70px;
     max-width: 458px;
     vertical-align: middle;
     text-align: left;
     align-content: center;
-    /*width: 100px;*/
-    /*padding: 10px;*/
-    /*margin-top: 29px;*/
     /* grid */
     /*outline: 5px solid rgba(255, 0, 0, 0.7);*/
     /*outline-offset: -5px;*/
@@ -651,9 +673,9 @@ img {
 
 .box2 input#id-number-child {
     border: none;
-    margin-left: -32px;
+    margin-left: -22px;
     text-align: center;
-    width: 110px;
+    width: 114px;
     height: 32px;
     background: var(--yellow-light);
 }
@@ -731,7 +753,8 @@ img {
 .map {
     position: relative;
     z-index: 0;
-    margin-top: -365px;
+    margin-top: 38px;
+    /*margin-top: -365px;*/
 }
 
 
@@ -744,8 +767,8 @@ img {
     height: 80px;
     align-content: center;
     align-items: center;
-    margin: -120px auto 0;
-    padding: 20px 124px;
+    margin: -115px auto 0;
+    padding: 20px 154px;
     /* grid */
     /*outline: 5px solid rgba(255, 0, 0, 0.7);*/
     /*outline-offset: -5px;*/
@@ -853,7 +876,7 @@ img {
     font-size: 14px;
     line-height: 80px;
     font-weight: 400;
-    /*align-self: center;*/
+    align-self: center;
     align-content: center;
     /* grid */
     /*outline: 5px solid rgba(0, 255, 0, 0.7);*/
@@ -869,7 +892,7 @@ img {
 }
 
 .copyright svg {
-    /*padding-top: 10px;*/
+    padding-top: 20px;
     align-self: center;
     align-items: center;
     fill: var(--basic-black);
